Arrumando os services